--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,9 @@
-*, *::after, *::before {
+body {
   box-sizing: border-box;
+}
+
+*, *::after, *::before {
+  box-sizing: inherit;
 }
 
 body {
